--- a/style.css
+++ b/style.css
@@ -12,3 +12,49 @@
 	margin: 2px;
 	text-align: center;
 }
+
+#startHintBox {
+	position: relative;
+
+	left: 50%;
+	top: 50%;
+
+	transform: translate(-50%, -50%);
+
+	background: rgba(0, 0, 0, 0.5);
+
+	width: 400px;
+	height: 80px;
+}
+
+#startHintBox > div {
+
+	position: relative;
+
+	left: 50%;
+	top: 50%;
+
+	transform: translate(-50%, -50%);
+
+	color: white;
+
+	border: 1px solid white;
+	
+	width: 390px;
+	height: 70px;
+}
+
+#startHint {
+
+	text-align: center;
+	position: relative;
+
+	height: 20px;
+
+	left: 50%;
+	top: 50%;
+
+	transform: translate(-50%, -50%);
+
+	color: white;
+}
