canvas generation * Update loop * Use of JS Set for object mgmt

--- a/src/theme.css
+++ b/src/theme.css
@@ -1,15 +1,10 @@
 
-#gameTitle {
-}
-
-#howToPlay {
-}
-
 #gameView
 {
 	background: white;
 }
 
 body {
+	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 	background: skyblue;
 }
