--- a/src/theme.css
+++ b/src/theme.css
@@ -4,7 +4,8 @@
 	background: white;
 }
 
-body {
+body 
+{
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 	background: skyblue;
 }
